# achievement-scavenger

./: .gitignore  README.md  package-lock.json  package.json  update.json  vite.config.ts
src/: App.tsx  constants.ts  main.tsx  types.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json.json  tauri.windows.conf.json  tracked.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AchievementCard.tsx  AutoUpdater.tsx  BatchImportModal.tsx  ChecklistsPanel.tsx  CloudSyncModal.tsx  ConfirmDialog.tsx  GameLinkModal.tsx  GuidedModePanel.tsx  Icons.tsx  LibraryDashboard.tsx  MenuBar.tsx  PsnReauthModal.tsx  RarityBadge.tsx  SetupScreen.tsx  UseUnlockSound.tsx
src/css/: style.css
