[package]
name = "achievementscavenger"
version = "0.1.0"
description = "Track Steam, Xbox and RetroAchievements progress."
authors = ["sawwormGames"]
edition = "2021"

[lib]
name = "trophymap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rfd = "0.17.2"
serde_json = "1.0"
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2.0.0"
discord-rich-presence = "0.2.3"
xcap = "0.3.3"
image = "0.25.1"
chrono = "0.4.38"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
debug = 0
strip = true
incremental = true

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
